2005-09-12 comwiz     * Migrated the router tests to junit
Monotone-Parent: 07408fb43286d8036290d4cb075fad370c5094de
Monotone-Revision: 1b9909e0482bfd294ecef9860982ab58b6aeb89c

Monotone-Author: comwiz
Monotone-Date: 2005-09-13T09:06:07
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -324,13 +324,12 @@
         <ant dir="core/java/" target="clover.report" />
     </target>
     <target name="test.report" depends="junit.report, clover.report"/>
-    <target name="useclover">
-        <taskdef resource="clovertasks"/>
-        <mkdir dir="reports/core/clover" />
-        <mkdir dir="reports/core/clover" />
-        <clover-setup initString="reports/core/clover/coverage.db"/>
-    </target>
     <target name="fulltest">
 		<ant dir="core/java/" target="fulltest" />
+		<ant dir="router/java/" target="fulltest" />
+    </target>
+    <target name="fullclovertest">
+		<ant dir="core/java/" target="fullclovertest" />
+		<ant dir="router/java/" target="fullclovertest" />
     </target>
 </project>
