2005-09-17  jrandom     * Added the natively compiled jbigi and patched java service wrapper for       OS X.  Thanks Bill Dorsey for letting me use your machine!     * Don't build i2p.exe or i2pinstall.exe when run on OS X machines, as we       don't bundle the binutils necessary (and there'd be a naming conflict       if we did).     * Added 'single user' functionality to syndie - if the single user       checkbox on the admin page is checked, all users are allowed to control       the instance and sync up with remote syndie nodes.     * Temporarily disable the x-i2p-gzip in i2ptunnel until it is more closely       debugged.
Monotone-Parent: 41c12c6a41392ad13b62b75e4090c7138aed92db
Monotone-Revision: b754eaf923166a900b5d0940961c719abff00e8e

Monotone-Author: jrandom
Monotone-Date: 2005-09-17T07:31:48
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,12 @@
         <copy file="apps/jetty/jettylib/javax.servlet.jar" todir="build/" />
     </target>
     <target name="buildexe">
+        <condition property="osx">
+	    <os family="mac" />
+	</condition>
+	<ant target="doBuildEXE" />
+    </target>
+    <target name="doBuildEXE" unless="osx">
         <jar destfile="./build/launchi2p.jar">
             <manifest>
 	     <attribute name="Main-Class" value="net.i2p.router.RouterLaunch" />
@@ -115,8 +121,8 @@
     </target>
     <target name="clean" depends="pkgclean" >
         <delete dir="./build" />
-        <delete file="i2pinstall.exe" />	
-        <delete file="i2p.exe" />	
+        <delete file="i2pinstall.exe" failonerror="false" quiet="true" />	
+        <delete file="i2p.exe" failonerror="false" quiet="true" />	
     </target>
     <target name="distclean" depends="clean">
         <ant dir="core/java/" target="distclean" />
@@ -199,7 +205,7 @@
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
         <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/systray.jar" todir="pkg-temp/lib" />
-        <copy file="i2p.exe" todir="pkg-temp/" />
+        <copy file="i2p.exe" todir="pkg-temp/" failonerror="false" />
         <copy file="installer/resources/runplain.sh" todir="pkg-temp/" />
         <copy file="apps/systray/java/lib/systray4j.jar" todir="pkg-temp/lib" />
         <copy file="apps/systray/java/lib/systray4j.dll" todir="pkg-temp/lib" />
@@ -289,7 +295,7 @@
         <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/router.jar" todir="pkg-temp/lib/" />
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
-        <copy file="i2p.exe" todir="pkg-temp/" />
+        <copy file="i2p.exe" todir="pkg-temp/" failonerror="false" />
         <copy file="installer/resources/runplain.sh" todir="pkg-temp/" />
         
         <!-- for the i2p 0.5 release, push jetty 5.2.1 -->
@@ -341,6 +347,12 @@
         <ant target="installerexe" />
     </target>
     <target name="installerexe">
+        <condition property="osx">
+	    <os family="mac" />
+	</condition>
+	<ant target="doInstallerEXE" />
+    </target>
+    <target name="doInstallerEXE">
 	<!-- now the installer exe -->
 	<taskdef name="launch4j"
                  classname="net.sf.launch4j.ant.Launch4jTask"
