include the lib64 wrapper (thanks mule)
Monotone-Parent: ea85fbdf1d701d5477a50b35327f4c1cb290b703
Monotone-Revision: 7874a642b9752eac66991f859ab5bdd79d397f86

Monotone-Author: jrandom
Monotone-Date: 2005-09-19T00:36:59
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -238,6 +238,9 @@
         <copy todir="pkg-temp/lib/wrapper/linux/">
             <fileset dir="installer/lib/wrapper/linux/" />
         </copy>
+        <copy todir="pkg-temp/lib/wrapper/linux64/">
+            <fileset dir="installer/lib/wrapper/linux64/" />
+        </copy>
         <copy todir="pkg-temp/lib/wrapper/macosx/">
             <fileset dir="installer/lib/wrapper/macosx/" />
         </copy>
