damn thee, syntax
Monotone-Parent: 56aa1b0108c396cc727b5cfd51231087762ee9bb
Monotone-Revision: 804ea2b806fa0ee191888dbe26d0c9ea9c6f39fe

Monotone-Author: jrandom
Monotone-Date: 2005-09-20T03:43:57
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -191,7 +191,7 @@
             <fileset dir="." includes="i2p.tar.bz2 install.jar i2pupdate.zip" />
         </delete>
     </target>
-    <target name="preppkg" depends="build buildexe">
+    <target name="preppkg" depends="build, buildexe">
         <delete dir="pkg-temp" />
         <copy file="build/ant.jar" todir="pkg-temp/lib/" />
         <copy file="build/heartbeat.jar" todir="pkg-temp/lib/" />
