--- a/apps/susidns/src/build.xml
+++ b/apps/susidns/src/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <project name="susidns" default="all" basedir=".">
 	<property name="jetty" value="../../jetty/" />
 	<property name="project" value="susidns" />
