--- a/build.xml
+++ b/build.xml
@@ -273,6 +273,7 @@
         <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
+	<copy file="installer/resources/ahelper-conflict-header.ht" todir="pkg-temp/docs/" />
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
         <mkdir dir="pkg-temp/eepsite/logs" />
@@ -339,6 +340,7 @@
         <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
+	<copy file="installer/resources/ahelper-conflict-header.ht" todir="pkg-temp/docs/" />
         <!-- the addressbook handles this for updates -->
         <!-- <copy file="hosts.txt" todir="pkg-temp/" /> -->
         <mkdir dir="pkg-temp/eepsite" />
