* Implemented a Syndie auto-updater.
Monotone-Parent: 01816d49f3faca34b310154508796d5d8329c336
Monotone-Revision: 6dbfb32c4268af713c2d1e4177417dc808c7540e

Monotone-Author: ragnarok
Monotone-Date: 2005-10-03T18:55:09
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -14,6 +14,12 @@
      <servlet-class>net.i2p.syndie.web.RSSServlet</servlet-class>
     </servlet>
      
+    <servlet>
+	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
+	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
+     <load-on-startup>1</load-on-startup>
+	</servlet>
+     
     <!-- precompiled servlets -->
     
     <servlet-mapping> 
