2005-10-09  jrandom     * Syndie CLI cleanup for simpler CLI posting.  Usage shown with       java -jar lib/syndie.jar     * Beginnings of the Syndie logging cleanup     * Delete corrupt Syndie posts
Monotone-Parent: 02ad666c1c13c2c3beaa2712a5c35247d6c237ba
Monotone-Revision: 4db97147c6d48d9abffe9d6186d59fec4bcdf5bc

Monotone-Author: jrandom
Monotone-Date: 2005-10-09T11:35:13
Monotone-Branch: i2p.i2p

--- a/apps/syndie/java/build.xml
+++ b/apps/syndie/java/build.xml
@@ -19,7 +19,7 @@
     <target name="jar" depends="builddep, compile">
         <jar destfile="./build/syndie.jar" basedir="./build/obj" includes="**/*.class">
             <manifest>
-                <attribute name="Main-Class" value="net.i2p.syndie.CLI" />
+                <attribute name="Main-Class" value="net.i2p.syndie.CLIPost" />
                 <attribute name="Class-Path" value="i2p.jar" />
             </manifest>
         </jar>
