--- a/apps/syndie/java/build.xml
+++ b/apps/syndie/java/build.xml
@@ -14,13 +14,19 @@
             srcdir="./src" 
             debug="true" deprecation="on" source="1.3" target="1.3" 
             destdir="./build/obj" 
-            classpath="../../../core/java/build/i2p.jar:../../jetty/jettylib/org.mortbay.jetty.jar:../../jetty/jettylib/javax.servlet.jar" />
+            classpath="../../../core/java/build/i2p.jar:../../jetty/jettylib/org.mortbay.jetty.jar:../../jetty/jettylib/javax.servlet.jar:../../jdom/jdom.jar:../../rome/rome-0.7.jar" />
     </target>
     <target name="jar" depends="builddep, compile">
         <jar destfile="./build/syndie.jar" basedir="./build/obj" includes="**/*.class">
             <manifest>
                 <attribute name="Main-Class" value="net.i2p.syndie.CLIPost" />
                 <attribute name="Class-Path" value="i2p.jar" />
+            </manifest>
+        </jar>
+        <jar destfile="./build/sucker.jar" basedir="./build/obj" includes="net/i2p/syndie/Sucker.class, net/i2p/syndie/SuckerFetchListener.class">
+            <manifest>
+                <attribute name="Main-Class" value="net.i2p.syndie.Sucker" />
+                <attribute name="Class-Path" value="i2p.jar jdom.jar rome-0.7.jar" />
             </manifest>
         </jar>
         <ant target="war" />
@@ -48,6 +54,8 @@
                 <pathelement location="../../jetty/jettylib/org.mortbay.jetty.jar" />
                 <pathelement location="../../jetty/jettylib/javax.servlet.jar" />
                 <pathelement location="../../jetty/jettylib/ant.jar" />
+                <pathelement location="../../jdom/jdom.jar" />
+                <pathelement location="../../rome/rome-0.7.jar" />
                 <pathelement location="build/obj" />
                 <pathelement location="../../../core/java/build/i2p.jar" />
             </classpath>
@@ -69,6 +77,8 @@
                 <pathelement location="../../jetty/jettylib/commons-el.jar" />
                 <pathelement location="../../jetty/jettylib/org.mortbay.jetty.jar" />
                 <pathelement location="../../jetty/jettylib/javax.servlet.jar" />
+                <pathelement location="../../jdom/jdom.jar" />
+                <pathelement location="../../rome/rome-0.7.jar" />
                 <pathelement location="build/obj" />
                 <pathelement location="../../../core/java/build/i2p.jar" />
             </classpath>
