--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -16,7 +16,7 @@ tunnel.0.startOnLoad=true
 # irc
 tunnel.1.name=ircProxy
 tunnel.1.description=IRC proxy to access the anonymous irc net
-tunnel.1.type=client
+tunnel.1.type=ircclient
 tunnel.1.sharedClient=true
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
