2005-10-14  jrandom     * More explicit filter for linux/PPC building (thanks anon!)
Monotone-Parent: 4b21921e50f9811dc75b7091ab7f7ac33ea2c109
Monotone-Revision: ce02f0afb97e5ecec927cbbc7dab78a8c9a9288c

Monotone-Author: jrandom
Monotone-Date: 2005-10-14T15:05:26
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,9 @@
 	    <os arch="x86_64" />
 	</condition>
         <condition property="noExe">
+	    <os arch="ppc" />
+	</condition>
+        <condition property="noExe">
 	    <os arch="amd64" />
 	</condition>
 	<ant target="doBuildEXE" />
