2005-10-17  jrandom     * Allow an env prop to configure whether we want to use the backwards       compatible (but not standards compliant) HMAC-MD5, or whether we want       to use the not-backwards compatible (but standards compliant) one.  No       one should touch this setting, unless your name is toad or jrandom ;)     * Added some new dummy facades     * Be more aggressive on loading up the router.config before building the       router context     * Added new hooks for apps to deal with previously undefined I2NP message       types without having to modify any code.     * Demo code for using a castrated router for SSU comm (SSUDemo.java)
Monotone-Parent: ba3a7defdc9cd3b4a1148e4de7b7713aa5f7ed5a
Monotone-Revision: 75f0f97a5a0c032174547245d0f800d0062af32a

Monotone-Author: jrandom
Monotone-Date: 2005-10-18T00:39:46
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,14 @@
         <ant dir="apps/susidns/src" target="all" />
         <ant dir="apps/syndie/java/" target="jar" />
     </target>
+    <target name="buildrouter">
+        <ant dir="core/java/" target="distclean" />
+        <ant dir="router/java/" target="distclean" />
+        <ant dir="core/java/" target="jar" />
+        <ant dir="router/java/" target="jar" />
+        <copy file="core/java/build/i2p.jar" todir="build/" />
+        <copy file="router/java/build/router.jar" todir="build/" />
+    </target>
     <target name="buildWEB">
         <ant dir="apps/jetty" target="fetchJettylib" />
         <ant dir="apps/routerconsole/java" target="build" />
@@ -367,8 +375,8 @@
 	<copy file="installer/resources/blogMeta.snm" tofile="pkg-temp/syndie/archive/ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/meta.snm" />
 	<copy file="installer/resources/blogPost.snd" tofile="pkg-temp/syndie/archive/ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/1126915200003.snd" />
     </target>
-    <taskdef name="izpack" classpath="${basedir}/installer/lib/izpack/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
     <target name="installer" depends="preppkg">
+        <taskdef name="izpack" classpath="${basedir}/installer/lib/izpack/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
         <jar destfile="./pkg-temp/lib/copy.jar" basedir="./core/java/build/obj" includes="net/i2p/util/*.class">
             <manifest><attribute name="Main-Class" value="net.i2p.util.Copy" /></manifest>
         </jar>
