remove jbigi.jar from the classpath so we don't mistakenly extract & overwrite the libjbigi.so.  Yeah, this means that i2psnark uses pure java modPow, but it doesn't do any real heavy lifting anyway, except a DSA signature every 5-10 minutes.  whoop de do.
Monotone-Parent: 6791f30210bbf01a50baf37342a1fc75e333a0ac
Monotone-Revision: b9a3567bace145b7f4695a8a18054c930745395b

Monotone-Author: jrandom
Monotone-Date: 2005-10-19T23:18:29
Monotone-Branch: i2p.i2p

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -19,7 +19,7 @@
         <jar destfile="./build/i2psnark.jar" basedir="./build/obj" includes="**/*.class">
             <manifest>
                 <attribute name="Main-Class" value="org.klomp.snark.Snark" />
-                <attribute name="Class-Path" value="i2p.jar jbigi.jar mstreaming.jar streaming.jar" />
+                <attribute name="Class-Path" value="i2p.jar mstreaming.jar streaming.jar" />
             </manifest>
         </jar>
     </target>
