2005-10-19  jrandom     * Ported the snark bittorrent client to I2P such that it is compatible       with i2p-bt and azneti2p.  For usage information, grab an update and run       "java -jar lib/i2psnark.jar".  It isn't currently multitorrent capable,       but adding in support would be fairly easy (see PeerAcceptor.java:49)     * Don't allow leaseSets expiring too far in the future (thanks postman)
Monotone-Parent: b9a3567bace145b7f4695a8a18054c930745395b
Monotone-Revision: 5c38c056cd4b692dad9e5ebacef3f508bc3a8e1a

Monotone-Author: jrandom
Monotone-Date: 2005-10-19T23:23:19
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,7 @@
         <ant dir="apps/susimail/" target="war" />
         <ant dir="apps/susidns/src" target="all" />
         <ant dir="apps/syndie/java/" target="jar" />
+        <ant dir="apps/i2psnark/java/" target="jar" />
     </target>
     <target name="buildrouter">
         <ant dir="core/java/" target="distclean" />
@@ -102,6 +103,7 @@
         <copy file="apps/syndie/java/build/syndie.jar" todir="build/" />
         <copy file="apps/syndie/java/build/sucker.jar" todir="build/" />
         <copy file="apps/syndie/syndie.war" todir="build/" />
+        <copy file="apps/i2psnark/java/build/i2psnark.jar" todir="build/" />
         <copy file="apps/jdom/jdom.jar" todir="build/" />
         <copy file="apps/rome/rome-0.7.jar" todir="build/" />
     </target>
@@ -158,6 +160,7 @@
         <ant dir="apps/susimail/" target="distclean" />
         <ant dir="apps/susidns/src/" target="distclean" />
         <ant dir="apps/systray/java/" target="distclean" />
+        <ant dir="apps/i2psnark/java/" target="distclean" />
         <ant dir="installer/java/" target="distclean" />
         <delete>
             <fileset dir="." includes="**/*.class" />
@@ -228,6 +231,7 @@
         <copy file="build/jdom.jar" todir="pkg-temp/lib" />
         <copy file="build/rome-0.7.jar" todir="pkg-temp/lib" />
         <copy file="build/sucker.jar" todir="pkg-temp/lib" />
+        <copy file="build/i2psnark.jar" todir="pkg-temp/lib/" />
         <copy file="i2p.exe" todir="pkg-temp/" failonerror="false" />
         <copy file="installer/resources/runplain.sh" todir="pkg-temp/" />
         <copy file="apps/systray/java/lib/systray4j.jar" todir="pkg-temp/lib" />
@@ -332,6 +336,7 @@
         <copy file="build/jdom.jar" todir="pkg-temp/lib" />
         <copy file="build/rome-0.7.jar" todir="pkg-temp/lib" />
         <copy file="build/sucker.jar" todir="pkg-temp/lib" />
+        <copy file="build/i2psnark.jar" todir="pkg-temp/lib" />
         
         <copy file="i2p.exe" todir="pkg-temp/" failonerror="false" />
         <copy file="installer/resources/runplain.sh" todir="pkg-temp/" />
