2005-10-29  jrandom     * Improved the bandwidth throtting on tunnel participation, especially for       low bandwidth peers.     * Improved failure handling in SSU with proactive reestablishment of       failing idle peers, and rather than shitlisting a peer who failed too       much, drop the SSU session and allow a new attempt (which, if it fails,       will cause a shitlisting)     * Clarify the cause of the shitlist on the profiles page, and include       bandwidth limiter info at the bottom of the peers page.
Monotone-Parent: 71e9673df6737a59828d3cc184db8ff3e21ee0c3
Monotone-Revision: 64fd13a68cc8b7ec1026682b072928b4b4420058

Monotone-Author: jrandom
Monotone-Date: 2005-10-29T21:35:24
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -26,7 +26,7 @@ tunnel.1.i2cpPort=7654
 tunnel.1.option.inbound.nickname=shared clients
 tunnel.1.option.outbound.nickname=shared clients
 tunnel.1.option.i2p.streaming.connectDelay=1000
-tunnel.1.option.i2p.maxWindowSize=1
+tunnel.1.option.i2p.streaming.maxWindowSize=1
 tunnel.1.startOnLoad=true
 
 # I2P's cvs server
