adjust the exe build filter to only run on linux or windows
Monotone-Parent: c9e08eb7bf1ee871c17603b0049181dff7c57ce2
Monotone-Revision: 7edcca8ebb6d37166456ada9c39e42f1ae2459e4

Monotone-Author: jrandom
Monotone-Date: 2005-10-30T01:07:09
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_4

--- a/build.xml
+++ b/build.xml
@@ -56,9 +56,6 @@
     </target>
     <target name="buildexe">
         <condition property="noExe">
-	    <os family="mac" />
-	</condition>
-        <condition property="noExe">
 	    <os arch="x86_64" />
 	</condition>
         <condition property="noExe">
@@ -66,6 +63,14 @@
 	</condition>
         <condition property="noExe">
 	    <os arch="amd64" />
+	</condition>
+	<condition property="noExe">
+	   <not>
+	    <or>
+	     <os name="Linux" />
+	     <os family="windows" />
+	    </or>
+	   </not>
 	</condition>
 	<ant target="doBuildEXE" />
     </target>
@@ -397,13 +402,18 @@
     </target>
     <target name="installerexe">
         <condition property="noExe">
-	    <os family="mac" />
-	</condition>
-        <condition property="noExe">
 	    <os arch="x86_64" />
 	</condition>
         <condition property="noExe">
 	    <os arch="amd64" />
+	</condition>
+	<condition property="noExe">
+	   <not>
+	    <or>
+	     <os name="Linux" />
+	     <os family="windows" />
+	    </or>
+	   </not>
 	</condition>
 	<ant target="doInstallerEXE" />
     </target>
